--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
@@ -17,6 +17,9 @@
 
 </head>
 
+    <!-- Bootstrap JS Bundle (incluye Popper) para que funcionen los modales y dropdowns -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 <body class="d-flex flex-column min-vh-100">
     <form id="formMain" runat="server" class="d-flex flex-column min-vh-100">
         <div>
