--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
@@ -5,14 +5,19 @@
 <html>
 <head runat="server">
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 
+    <link href="/Public/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/Public/fonts/css/all.min.css" rel="stylesheet" />
+    <link href="/Public/css/site.css?v2.1" rel="stylesheet" />
+
     <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>@ViewBag.Title</title>  <!-- o @PageTitle en Blazor -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Frutilla</title>
+    <!-- o @PageTitle en Blazor -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
         rel="stylesheet" />
 
 </head>
