--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/Public/css/site.css
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/Public/css/site.css
@@ -94,3 +94,15 @@
 .RadioButtonList label {
     margin-left: 4px;
 }
+
+.date-filter {
+    margin-left: 40px;
+    margin-bottom: 20px;
+}
+
+input[type="date"] {
+    padding: 5px 10px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
