--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
@@ -36,7 +36,10 @@
     <!-- 1) Barra de navegación principal -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
-      <a class="navbar-brand" href="/">🍓 Frutilla</a>
+      <a class="navbar-brand d-flex align-items-center" href="/">
+           <img src="/Public/images/frutillaLogo.jpeg" alt="Frutilla" height="40" />
+          <span>Frutilla</span>
+      </a>
       <button class="navbar-toggler" type="button"
               data-bs-toggle="collapse" data-bs-target="#mainNav">
         <span class="navbar-toggler-icon"></span>
