--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
@@ -9,16 +9,13 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 
-    <link href="/Public/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/Public/fonts/css/all.min.css" rel="stylesheet" />
-    <link href="/Public/css/site.css?v2.1" rel="stylesheet" />
+    <link href="/Public/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="/Public/fonts/css/all.min.css" rel="stylesheet"/>
+    <link href="/Public/css/site.css" rel="stylesheet" />
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Frutilla</title>
-    <!-- o @PageTitle en Blazor -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-        rel="stylesheet" />
 
 </head>
 
@@ -34,7 +31,7 @@
     
 
     <!-- 1) Barra de navegación principal -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-light bs-primary shadow-sm" >
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="/">
            <img src="/Public/images/frutillaLogo.jpeg" alt="Frutilla" height="40" />
@@ -71,7 +68,7 @@
   </nav>
 
     <!-- 2) Header de sección -->
-  <header class="bg-light py-2 border-bottom">
+  <header class="py-2 border-bottom">
     <div class="container">
       <h2 class="m-0">  </h2>
     </div>
