--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
@@ -35,16 +35,16 @@
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="/">
            <img src="/Public/images/frutillaLogo.jpeg" alt="Frutilla" height="40" />
-          <span>Frutilla</span>
+          <span class="ms-2 fw-bold text-success">Frutilla</span>
       </a>
       <button class="navbar-toggler" type="button"
               data-bs-toggle="collapse" data-bs-target="#mainNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ms-auto">
+        <ul class="navbar-nav navbar-frutilla ms-auto" >
           <li class="nav-item">
-            <NavLink class="nav-link" href="/">Home</NavLink>   <!-- Blazor -->
+            <NavLink class="nav-link active" href="/">Home</NavLink>   <!-- Blazor -->
             <!-- MVC: <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>-->
           </li>
           <li class="nav-item">
@@ -57,7 +57,7 @@
               <a class="nav-link" href="/Notificaciones/ListarNotificaciones.aspx">Notificaciones</a>
           </li>
           <li class="nav-item">
-            <NavLink class="nav-link active" href="/Monitoreo">Monitoreo</NavLink>
+            <NavLink class="nav-link" href="/Monitoreo">Monitoreo</NavLink>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/Cuenta"><i class="bi bi-person-circle"></i></a>
