--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
@@ -28,71 +28,67 @@
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
         </div>
-    
 
-    <!-- 1) Barra de navegación principal -->
-  <nav class="navbar navbar-expand-lg navbar-light bs-primary shadow-sm" >
-    <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="/">
-           <img src="/Public/images/frutillaLogo.jpeg" alt="Frutilla" height="40" />
-          <span class="ms-2 fw-bold text-success">Frutilla</span>
-      </a>
-      <button class="navbar-toggler" type="button"
-              data-bs-toggle="collapse" data-bs-target="#mainNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav navbar-frutilla ms-auto" >
-            <li class="nav-item">
-                <asp:HyperLink ID="hlHome" runat="server"
-                    CssClass="nav-link active"
-                    NavigateUrl="~/LocalSupervisor.aspx"
-                    Text="Home" />
-                <!-- Blazor -->
-                <!-- MVC: <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>-->
-            </li>
-          <li class="nav-item">
-            <NavLink class="nav-link" href="/Productos">Productos</NavLink>
-          </li>
-          <li class="nav-item">
-              <asp:HyperLink ID="HyperLink1" runat="server"
-                  CssClass="nav-link active"
-                  NavigateUrl="~/DetallePedido.aspx"
-                  Text="Pedidos" />
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="/Notificaciones/ListarNotificaciones.aspx">Notificaciones</a>
-          </li>
-          <li class="nav-item">
-            <NavLink class="nav-link" href="/Monitoreo">Monitoreo</NavLink>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/Cuenta"><i class="bi bi-person-circle"></i></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
 
-    <!-- 2) Header de sección -->
-  <header class="py-2 border-bottom">
-    <div class="container">
-      <h2 class="m-0">  </h2>
-    </div>
-  </header>
+        <!-- 1) Barra de navegación principal -->
+        <nav class="navbar navbar-expand-lg navbar-light bs-primary shadow-sm">
+            <div class="container">
+                <a class="navbar-brand d-flex align-items-center" href="/">
+                    <img src="/Public/images/frutillaLogo.jpeg" alt="Frutilla" height="40" />
+                    <span class="ms-2 fw-bold text-success">Frutilla</span>
+                </a>
+                <button class="navbar-toggler" type="button"
+                    data-bs-toggle="collapse" data-bs-target="#mainNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mainNav">
+                    <ul class="navbar-nav navbar-frutilla ms-auto">
+                        <li class="nav-item">
+                            <asp:HyperLink ID="hlHome" runat="server"
+                                CssClass="nav-link active"
+                                NavigateUrl="~/LocalSupervisor.aspx"
+                                Text="Home" />
+                        </li>
+                        <li class="nav-item">
+                            <asp:HyperLink ID="HyperLink2" runat="server"
+                                CssClass="nav-link active"
+                                NavigateUrl="~/ListaProductosSupervisor.aspx"
+                                Text="Productos" />
+                        </li>
+                        <li class="nav-item">
+                            <asp:HyperLink ID="HyperLink1" runat="server"
+                                CssClass="nav-link active"
+                                NavigateUrl="~/DetallePedido.aspx"
+                                Text="Pedidos" />
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Notificaciones/ListarNotificaciones.aspx">Notificaciones</a>
+                        </li>
+                        <li class="nav-item">
+                            <navlink class="nav-link" href="/Monitoreo">Monitoreo</navlink>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Cuenta"><i class="bi bi-person-circle"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
-      <!-- 3) Área principal donde se renderiza cada vista 
+        <!-- 2) Header de sección -->
+        <header class="py-2 border-bottom">
+            <div class="container">
+                <h2 class="m-0"></h2>
+            </div>
+        </header>
+
+        <!-- 3) Área principal donde se renderiza cada vista 
           colcamos un ContenPlaceHolder para colcoer-->
-  <main class="flex-grow-1">
-       
-           
-      <asp:ContentPlaceHolder ID="MainContent" runat="server" />
+        <main class="flex-grow-1">
+            <asp:ContentPlaceHolder ID="MainContent" runat="server" />
+        </main>
 
-          
-
-  </main>
-
-         </form>
+    </form>
     <!-- Footer opcional -->
   <footer class="bg-white text-center py-3 border-top">
     <div class="container">
