--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/MainLayout.Master
@@ -9,9 +9,11 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
     <link href="/Public/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/Public/fonts/css/all.min.css" rel="stylesheet"/>
     <link href="/Public/css/site.css" rel="stylesheet" />
+
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -21,6 +23,7 @@
 
     <!-- Bootstrap JS Bundle (incluye Popper) para que funcionen los modales y dropdowns -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 
 <body class="d-flex flex-column min-vh-100">
     <form id="formMain" runat="server" class="d-flex flex-column min-vh-100">
