--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/Cliente.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/Cliente.Master
@@ -25,7 +25,7 @@
 
 
 <body class="d-flex flex-column min-vh-100">
-    <form id="formMain" runat="server" class="d-flex flex-column min-vh-100">
+    <form id="formMain" runat="server" class="d-flex flex-column flex-grow-1">
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
@@ -95,14 +95,14 @@
 
     </form>
     <!-- Footer opcional -->
-  <footer class="bg-white text-center py-3 border-top">
-    <div class="container">
+  <footer class="mt-auto bg-white text-center py-3 border-top">
+    
       <small>© 2025 Frutilla Soft</small>
-    </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
+
 </html>
