--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/Cliente.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/Cliente.Master
@@ -73,7 +73,7 @@
                         
                        
                         <li class="nav-item">
-                            <a class="nav-link" href="/Cuenta"><i class="bi bi-person-circle"></i></a>
+                            <a class="nav-link" href="ClientePerfil.aspx"><i class="bi bi-person-circle"></i></a>
                         </li>
                     </ul>
                 </div>
