--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/Empleado.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/Empleado.Master
@@ -71,7 +71,7 @@
                             <navlink class="nav-link" href="/Monitoreo">Monitoreo</navlink>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Cuenta"><i class="bi bi-person-circle"></i></a>
+                            <a class="nav-link" href="EmpleadoPerfil.aspx"><i class="bi bi-person-circle"></i></a>
                         </li>
                     </ul>
                 </div>
