--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/Empleado.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/Empleado.Master
@@ -65,7 +65,7 @@
                                 Text="Pedidos" />
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Notificaciones/ListarNotificaciones.aspx">Notificaciones</a>
+                            <a class="nav-link" href="ListarNotificaciones.aspx">Notificaciones</a>
                         </li>
                         <li class="nav-item">
                             <navlink class="nav-link" href="/Monitoreo">Monitoreo</navlink>
