--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/Empleado.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/Empleado.Master
@@ -9,9 +9,9 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="/Public/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="/Public/fonts/css/all.min.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="/Public/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/Public/fonts/css/all.min.css" rel="stylesheet" />
     <link href="/Public/css/site.css" rel="stylesheet" />
 
 
@@ -20,9 +20,6 @@
     <title>Frutilla</title>
 
 </head>
-
-    <!-- Bootstrap JS Bundle (incluye Popper) para que funcionen los modales y dropdowns -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
 <body class="d-flex flex-column min-vh-100">
@@ -70,8 +67,21 @@
                         <li class="nav-item">
                             <navlink class="nav-link" href="/Monitoreo">Monitoreo</navlink>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="EmpleadoPerfil.aspx"><i class="bi bi-person-circle"></i></a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="perfilDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-person-circle"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="perfilDropdown">
+                                <li>
+                                    <a class="dropdown-item" href="EmpleadoPerfil.aspx">
+                                        <i class="bi bi-person-lines-fill me-2"></i>Ver perfil
+                                    </a>
+                                </li>
+                                <li>
+                                    <asp:LinkButton ID="btnCerrarSesionMaster" runat="server" CssClass="dropdown-item" OnClick="btnCerrarSesionMaster_Click"><i class="bi bi-box-arrow-right me-2"></i>Cerrar sesión
+                                    </asp:LinkButton>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
@@ -93,13 +103,13 @@
 
     </form>
     <!-- Footer opcional -->
-  <footer class="bg-white text-center py-3 border-top">
-    <div class="container">
-      <small>© 2025 Frutilla Soft</small>
-    </div>
-  </footer>
+    <footer class="bg-white text-center py-3 border-top">
+        <div class="container">
+            <small>© 2025 Frutilla Soft</small>
+        </div>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
