--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/Cliente.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/Cliente.Master
@@ -21,6 +21,8 @@
 
 </head>
 
+<!-- Bootstrap JS Bundle (incluye Popper) para que funcionen los modales y dropdowns -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
 <body class="d-flex flex-column min-vh-100">
@@ -47,47 +49,35 @@
                         <li class="nav-item">
                             <asp:HyperLink ID="hlHome" runat="server"
                                 CssClass="nav-link active"
-                                NavigateUrl="~/ClienteHome.aspx"
+                                NavigateUrl="ClienteHome.aspx"
                                 Text="Home" />
                         </li>
                         <li class="nav-item">
                             <asp:HyperLink ID="HyperLink2" runat="server"
                                 CssClass="nav-link active"
-                                NavigateUrl="~/ClienteListaProducto.aspx"
+                                NavigateUrl="ClienteListaProducto.aspx"
                                 Text="Comprar" />
                         </li>
                         <li class="nav-item">
                             <asp:HyperLink ID="HyperLink1" runat="server"
                                 CssClass="nav-link active"
-                                NavigateUrl="~/ClientePedidos.aspx"
+                                NavigateUrl="ClientePedidos.aspx"
                                 Text="Pedidos" />
                         </li>
 
                         <li class="nav-item">
                             <asp:HyperLink ID="HyperLink3" runat="server"
                                 CssClass="nav-link active"
-                                NavigateUrl="~/ClienteCarrito.aspx"
+                                NavigateUrl="ClienteCarrito.aspx"
                                 Text="Carrito" />
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href=""><i class="bi bi-bell-fill"></i></a>
+                            <a class="nav-link" href="Notificaciones/ClienteNotificaciones.aspx"><i class="bi bi-bell-fill"></i></a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="perfilDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="bi bi-person-circle"></i>
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="perfilDropdown">
-                                <li>
-                                    <a class="dropdown-item" href="ClientePerfil.aspx">
-                                        <i class="bi bi-person-lines-fill me-2"></i>Ver perfil
-                                    </a>
-                                </li>
-                                <li>
-                                    <asp:LinkButton ID="btnCerrarSesionMaster" runat="server" CssClass="dropdown-item" OnClick="btnCerrarSesionMaster_Click"><i class="bi bi-box-arrow-right me-2"></i>Cerrar sesión
-                                    </asp:LinkButton>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="ClientePerfil.aspx"><i class="bi bi-person-circle"></i></a>
                         </li>
+
                     </ul>
                 </div>
             </div>
