--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/Empleado.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/Empleado.Master
@@ -20,7 +20,8 @@
     <title>Frutilla</title>
 
 </head>
-
+<!-- Bootstrap JS Bundle (incluye Popper) para que funcionen los modales y dropdowns -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <body class="d-flex flex-column min-vh-100">
     <form id="formMain" runat="server" class="d-flex flex-column min-vh-100">
@@ -33,7 +34,7 @@
         <!-- 1) Barra de navegación principal -->
         <nav class="navbar navbar-expand-lg navbar-light bs-primary shadow-sm">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center" href="/">
+                <a class="navbar-brand d-flex align-items-center" href="LocalSupervisor.aspx">
                     <img src="/Public/images/frutillaLogo.jpeg" alt="Frutilla" height="40" />
                     <span class="ms-2 fw-bold text-success">Frutilla</span>
                 </a>
@@ -46,43 +47,32 @@
                         <li class="nav-item">
                             <asp:HyperLink ID="hlHome" runat="server"
                                 CssClass="nav-link active"
-                                NavigateUrl="~/LocalSupervisor.aspx"
+                                NavigateUrl="LocalSupervisor.aspx"
                                 Text="Home" />
                         </li>
                         <li class="nav-item">
                             <asp:HyperLink ID="HyperLink2" runat="server"
                                 CssClass="nav-link active"
-                                NavigateUrl="~/ListaProductosSupervisor.aspx"
+                                NavigateUrl="ListaProductosSupervisor.aspx"
                                 Text="Productos" />
                         </li>
                         <li class="nav-item">
                             <asp:HyperLink ID="HyperLink1" runat="server"
                                 CssClass="nav-link active"
-                                NavigateUrl="~/ListaPedidos.aspx"
+                                NavigateUrl="ListaPedidos.aspx"
                                 Text="Pedidos" />
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ListarNotificaciones.aspx">Notificaciones</a>
+                            <a class="nav-link" href="Notificaciones/ListarNotificaciones.aspx">Notificaciones</a>
                         </li>
                         <li class="nav-item">
-                            <navlink class="nav-link" href="/Monitoreo">Monitoreo</navlink>
+                            <navlink class="nav-link" href="Monitoreo.aspx">Monitoreo</navlink>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="perfilDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="bi bi-person-circle"></i>
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="perfilDropdown">
-                                <li>
-                                    <a class="dropdown-item" href="EmpleadoPerfil.aspx">
-                                        <i class="bi bi-person-lines-fill me-2"></i>Ver perfil
-                                    </a>
-                                </li>
-                                <li>
-                                    <asp:LinkButton ID="btnCerrarSesionMaster" runat="server" CssClass="dropdown-item" OnClick="btnCerrarSesionMaster_Click"><i class="bi bi-box-arrow-right me-2"></i>Cerrar sesión
-                                    </asp:LinkButton>
-                                </li>
-                            </ul>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="/EmpleadoPerfil.aspx"><i class="bi bi-person-circle"></i></a>
                         </li>
+
                     </ul>
                 </div>
             </div>
