--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/Empleado.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/Empleado.Master
@@ -91,13 +91,13 @@
             <asp:ContentPlaceHolder ID="MainContent" runat="server" />
         </main>
 
+    <footer class="mt-auto bg-white text-center py-3 border-top">
+        
+            <small>© 2025 Frutilla Soft</small>
+        
+    </footer>
     </form>
     <!-- Footer opcional -->
-    <footer class="bg-white text-center py-3 border-top">
-        <div class="container">
-            <small>© 2025 Frutilla Soft</small>
-        </div>
-    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
