--- a/Frutilla/FrutillaWS/src/main/resources/VentasXEmpleado.jrxml
+++ b/Frutilla/FrutillaWS/src/main/resources/VentasXEmpleado.jrxml
@@ -1,7 +1,7 @@
 <!-- Created with Jaspersoft Studio version 7.0.3.final using JasperReports Library version 7.0.3-41034ca841d452f3305ba55b9042260aaa1ab5dd  -->
 <jasperReport name="VentasXEmpleado" language="java" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="d8a87ba0-434e-4c26-8b41-06be486e9225">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="FrutillaTest"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Frutilla"/>
 	<parameter name="NumEmpleado" class="java.lang.Integer"/>
 	<query language="SQL"><![CDATA[SELECT `idOrdenVenta`,
 	fecha,
@@ -51,9 +51,6 @@ WHERE  frutilla.`OrdenVenta`.`idEmpleado` = $P{NumEmpleado} ]]></query>
 	<title height="79" splitType="Stretch">
 		<element kind="staticText" uuid="07e6cee0-bb4c-41c1-9c9b-fc48e5f3a196" x="150" y="15" width="266" height="30" fontSize="16.0" bold="true" hTextAlign="Center">
 			<text><![CDATA[Reportes de Ventas por Empleado]]></text>
-		</element>
-		<element kind="image" uuid="5dbc0ad0-e129-409c-bc1c-97843ff790a9" x="10" y="10" width="80" height="40">
-			<expression><![CDATA["C:/Users/ADMIN/Documents/GitHub/Progra3_Frutillas/image-Jasper/nuevva-marca-frutilla.png"]]></expression>
 		</element>
 	</title>
 	<pageHeader height="48" splitType="Stretch">
