--- a/FrutillaFront/FrutillaLocalWebService/LocalWebService/Cliente.Master
+++ b/FrutillaFront/FrutillaLocalWebService/LocalWebService/Cliente.Master
@@ -75,7 +75,7 @@
                             <a class="nav-link" href="Notificaciones/ClienteNotificaciones.aspx"><i class="bi bi-bell-fill"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/ClientePerfil.aspx"><i class="bi bi-person-circle"></i></a>
+                            <a class="nav-link" href="ClientePerfil.aspx"><i class="bi bi-person-circle"></i></a>
                         </li>
 
                     </ul>
